...
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/dreamTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#702963"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />
...
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/dreamSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp" />

                <TextView
...
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/dreamTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#3A405A"
                    android:layout_marginBottom="12dp" />

...
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/dreamCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#3A405A"
                    android:layout_marginBottom="12dp" />

...
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"

                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/dreamLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#3A405A" />

            </LinearLayout>
...
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/analysisText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#3A405A"
                    android:lineSpacingExtra="4dp" />
            </LinearLayout>
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:backgroundTint="@color/rosewood"
                android:text="@string/edit" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/delete"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:backgroundTint="#C62828" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:backgroundTint="@color/byzantine"
                android:text="@string/share_dream" />


        </LinearLayout>
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:backgroundTint="@color/dusty_lavender"
...
